test_yuriiq/catalog/language/russian/account/password.php
<?php

// text
$_['text_account']	= 'Личный Кабинет';
$_['text_success']	= 'Ваш пароль успешно изменен!';
$_['text_password']	= 'Ваш пароль';

// error
$_['error_password']	= 'Пароль должен быть от 4 до 20 символов!';
$_['error_confirm']	= 'Пароли не совпадают!';

// entry
$_['entry_password']	= 'Пароль:';
$_['entry_confirm']	= 'Подтвердите пароль:';

// heading
$_['heading_title']	= 'Смена пароля';
?>